--- a/add-to-list/index.html
+++ b/add-to-list/index.html
@@ -1,17 +1,17 @@
 <!-- Projekt 3 - Zadanie 2 -
  https://websamuraj.pl/examples/js/projekt3-zad2/
 -->
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
- <meta charset="UTF-8">
- <link rel="stylesheet" href="./style.css">
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
- <title>Projekt 3 - zadanie 2</title>
-</head>
-<body>
- <script src="main.js"></script>
-</body>
-
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <title>Add to list</title>  
+    </head>
+    <body>
+        <script src="main.js"></script>
+    </body>
+    </html>
