--- a/add-button/index.html
+++ b/add-button/index.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        button {
-            display: block;
-            margin: 15px auto;
-            height: 40px;
-        }
-        .big {
-            font-size: 24px;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Add button</title>
 </head>
 <body>
-    <button>Doadaj element do listy</button>
+    <button class="btn">Add element to list</button>
     <script>
         const button = document.querySelector('button');
         let number = 1;
