--- a/passoword/index.html
+++ b/passoword/index.html
@@ -15,7 +15,7 @@
             </div>            
             <input type="text" id="pass" class="form-control " placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
         </div>
-        <p class="mt-3 text-center border border-secondary rounded py-2">Every day is a new day.</p>
+        <p class="mt-3 text-center border border-secondary rounded py-2">Every day i a new day.</p>
     </div>
     <script src="./script.js"></script>
 </body>
