--- a/passoword/index.html
+++ b/passoword/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <title>Password</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             </div>            
             <input type="text" id="pass" class="form-control " placeholder="Password" aria-label="Password" aria-describedby="basic-addon1">
         </div>
-        <p class="mt-3 text-center border border-secondary rounded py-2"></p>
+        <p class="mt-3 text-center border border-secondary rounded py-2 d-none"></p>
     </div>
     <script src="./script.js"></script>
 </body>
