hand selection added

--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>"Paper Rock Scissors" Game</h1>
-    <div>
+    <div class="select">
         <h3>Choose:</h3>
         <img data-option="paper" src="./img/paper.jpg" alt="paper" title="paper">
         <img data-option="rock" src="./img/rock.jpg" alt="rock" title="rock">
         <img data-option="scissors" src="./img/scissors.jpg" alt="scissors" title="scissors">
     </div>
-    <button>Let's play!</button>
+    <button class="start">Let's play!</button>
     <div>
         <h3>Game score</h3>
         <p>Your choice: <span data-summary="your choice"></span></p>
