--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -17,16 +17,16 @@
     <button class="start">Let's play!</button>
     <div>
         <h3>Game score</h3>
-        <p>Your choice: <span data-summary="your choice"></span></p>
-        <p>Computer choice: <span data-summary="your choice"></span></p>
+        <p>Your choice: <span data-summary="player-choice"></span></p>
+        <p>Computer choice: <span data-summary="computer-choice"></span></p>
         <h2>Winner: <span data-summary="winner"></span></h2>
     </div>
     <div>
         <h3>Current results</h3>
-        <p>Number of games: <span>0</span></p>
-        <p>Wins: <span>0</span></p>
-        <p>Losers: <span>0</span></p>
-        <p>Draw: <span>0</span></p>
+        <p class="numbers">Number of games: <span>0</span></p>
+        <p class="wins">Wins: <span>0</span></p>
+        <p class="losses">Losses: <span>0</span></p>
+        <p class="draws">Draw: <span>0</span></p>
     </div>
     <script src="./script.js"></script>
 </body>
