end of the game added

--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Paper Rock Scissors</title>
 </head>
 <body>
-    <h1>"Paper Rock Scissors" Game</h1>
-    <div class="select">
+    <div class="container text-center mt-3">
+
+        <h1 class="mb-3">"Paper Rock Scissors" Game</h1>
         <h3>Choose:</h3>
-        <img data-option="paper" src="./img/paper.jpg" alt="paper" title="paper">
-        <img data-option="rock" src="./img/rock.jpg" alt="rock" title="rock">
-        <img data-option="scissors" src="./img/scissors.jpg" alt="scissors" title="scissors">
+        <div class="select">
+            <img  class="mx-2 my-2" data-option="paper" src="./img/paper.jpg" alt="paper" title="paper">
+            <img  class="mx-2 my-2" data-option="rock" src="./img/rock.jpg" alt="rock" title="rock">
+            <img  class="mx-2 my-2" data-option="scissors" src="./img/scissors.jpg" alt="scissors" title="scissors">
+        </div>
+        <button class="start btn btn-primary mt-3">Let's play!</button>
+        <div class="row justify-content-center">
+        <div class="col-5">
+            <h3>Game score</h3>
+            <p>Your choice: <span data-summary="player-choice"></span></p>
+            <p>Computer choice: <span data-summary="computer-choice"></span></p>
+            <h2>Winner: <span data-summary="winner"></span></h2>
+        </div>
+        <div class="col-5">
+            <h3>Current results</h3>
+            <p class="numbers">Number of games: <span>0</span></p>
+            <p class="wins">Wins: <span>0</span></p>
+            <p class="losses">Losses: <span>0</span></p>
+            <p class="draws">Draw: <span>0</span></p>
+        </div>
     </div>
-    <button class="start">Let's play!</button>
-    <div>
-        <h3>Game score</h3>
-        <p>Your choice: <span data-summary="player-choice"></span></p>
-        <p>Computer choice: <span data-summary="computer-choice"></span></p>
-        <h2>Winner: <span data-summary="winner"></span></h2>
+        <script src="./script.js"></script>
     </div>
-    <div>
-        <h3>Current results</h3>
-        <p class="numbers">Number of games: <span>0</span></p>
-        <p class="wins">Wins: <span>0</span></p>
-        <p class="losses">Losses: <span>0</span></p>
-        <p class="draws">Draw: <span>0</span></p>
-    </div>
-    <script src="./script.js"></script>
-</body>
+    </body>
 </html>
