--- a/typing-effect/index.html
+++ b/typing-effect/index.html
@@ -13,10 +13,21 @@
              font-size: 20px;
              letter-spacing: 1px;
             }
+            .cursor {
+                opacity: 0;
+                transition: .2s;
+                border-left: 2px solid #000;
+            }
+            .cursor.active {
+                opacity: 1;
+            }
     </style>
 </head>
 <body>
-    <div><span class="text"></span></div>
+    <div>
+        <span class="text"></span>
+        <span class="cursor"></span>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
