--- a/counter/index.html
+++ b/counter/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Counter</title>
+    <style>
+            body,html {
+                height: 100%;
+              }
+    </style>
 </head>
 <body>
+    <div class="container  text-center">
+        <div class="row">
+            <button class="start col">START</button>
+            <button class="reset col"> RESET</button>
+        </div>
+        <div class="row">
+            <div class="col text">
+                Time in seconds
+                <span>---</span>
+            </div>
+        </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
