list filter added

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -8,6 +8,7 @@
     <title>To do list</title>
 </head>
 <body>
+    <input type="text">
     <ul>
         <li>zadanie-1 <button>x</button></li>
         <li>zadanie-2 <button>x</button></li>
