adding tasks added

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -8,18 +8,13 @@
     <title>To do list</title>
 </head>
 <body>
-    <input type="text">
+    <form action="">
+        <input type="text">
+        <button>Add task</button>
+    </form>
+    <h1>Tasks number: <span>0</span></h1>
     <ul>
-        <li>zadanie-1 <button>x</button></li>
-        <li>zadanie-2 <button>x</button></li>
-        <li>zadanie-3 <button>x</button></li>
-        <li>zadanie-4 <button>x</button></li>
-        <li>zadanie-5 <button>x</button></li>
-        <li>zadanie-6 <button>x</button></li>
-        <li>zadanie-7 <button>x</button></li>
-        <li>zadanie-8 <button>x</button></li>
-        <li>zadanie-9 <button>x</button></li>
-        <li>zadanie-10 <button>x</button></li>
+    
     </ul>
     <script src="./script.js"></script>
 </body>
